--- a/frontend/bb-app/src/components/formRegister/formRegister.css
+++ b/frontend/bb-app/src/components/formRegister/formRegister.css
@@ -3,54 +3,69 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: auto;
+    width: 100vw;
     background-color: #f4f4f9;
     margin: 0;
 }
 
-form {
-    background-color: white;
+.formRegister {
+    background-color: #E8DDC7;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    width: 400px;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5)
 }
 
 label {
-    font-weight: bold;
-    margin-bottom: 10px;
-    display: block;
+    font-family: BloodBowl;
 }
 
 input[type="text"],
 input[type="email"],
 input[type="password"] {
-    width: calc(100% - 20px);
-    padding: 10px;
+    width: 80%;
+    padding: 15px;
     margin-bottom: 20px;
+    margin-top: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
     color: black;
+    background-color: #e7e3da;
 }
 
-button {
-    background-color: #0056b3;
+.buttonSubmit {
+    font-family: BloodBowl;
+    background-color: #B71418;
     color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 4px;
+    border: solid 1px white;
+    padding: 10px 10px;
+    border-radius: 5px;
     cursor: pointer;
-    width: 100%;
-    font-size: 16px;
+    font-size: 30px;
 }
 
-button:hover {
-    background-color: #004494;
+.buttonSubmit:hover {
+    background-color: #830f11;
+    transform: scale(1.05);
 }
 
 input:focus,
 button:focus {
     outline: none;
-    border-color: #0056b3;
-    box-shadow: 0 0 3px #0077cc;
+    border-color: #B71418;
+    box-shadow: 0 0 3px #B71418;
+}
+
+@media screen and (max-width: 600px) {
+    .formRegister {
+        width: 300px;
+    }
+
+    .buttonSubmit {
+        font-size: 20px;
+    }
+
+
 }
