--- a/frontend/bb-app/src/pages/mainCoachView/mainCoachView.css
+++ b/frontend/bb-app/src/pages/mainCoachView/mainCoachView.css
@@ -11,6 +11,14 @@
     height: 100vh;
 }
 
+.entrenadorButtons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+}
+
 .buttonEntrenador {
     font-family: BloodBowl;
     background-color: #B71418;
