--- a/frontend/bb-app/src/pages/mainCoachView/mainCoachView.css
+++ b/frontend/bb-app/src/pages/mainCoachView/mainCoachView.css
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     height: auto;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
@@ -16,6 +16,12 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+
+}
+
+.bodyPage {
+    display: flex;
+    width: 100vw;
 
 }
 
