--- a/frontend/bb-app/src/pages/coachTeamView/coachTeamView.css
+++ b/frontend/bb-app/src/pages/coachTeamView/coachTeamView.css
@@ -83,3 +83,38 @@
     background-color: #830f11;
     transform: scale(1.05);
 }
+
+.editableRow {
+    background-color: #f3f4f6;
+    /* Light grey background */
+    color: #333;
+    /* Darker text color for better contrast */
+}
+
+.saveButton,
+.cancelButton {
+    margin-right: 5px;
+    padding: 5px 10px;
+    font-size: 12px;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.saveButton {
+    background-color: #4CAF50;
+    /* Green */
+}
+
+.cancelButton {
+    background-color: #f44336;
+    /* Red */
+}
+
+input[type="text"].editInput {
+    width: 50px;
+    padding: 5px;
+    margin: 0;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
